# dataflow

./: .gitignore  CMakeLists.txt  imgui.ini  memo.txt
.tests/: CMakeLists.txt  main.cpp  namespace.h  namespace_impl_a.cpp  namespace_impl_b.cpp
include/: dataflow.h  dataflow.hpp
src/: dataflow.cpp  main.cpp
